feat(applications): layout

--- a/translations/v2/en/features/menu.json
+++ b/translations/v2/en/features/menu.json
@@ -3,6 +3,7 @@
   "projects": "Projects",
   "ecosystems": "Ecosystems",
   "contributions": "Contributions",
+  "applications": "Applications",
   "rewards": "Rewards",
   "hackathons": "Hackathons",
   "publicProfile": "Public profile",
