refactor(applications): error translation

--- a/translations/v2/en/pages/project-applications/project-applications-table.json
+++ b/translations/v2/en/pages/project-applications/project-applications-table.json
@@ -18,5 +18,6 @@
   "empty": {
     "title": "No applications",
     "description": "There are no applications for this project right now."
-  }
+  },
+  "error": "An error occurred, please try again later."
 }
