handle pooling in permission modal

--- a/translations/v2/en/features/github-permissions/read-write-issue-permissions.json
+++ b/translations/v2/en/features/github-permissions/read-write-issue-permissions.json
@@ -8,7 +8,8 @@
       },
       "footerButtons": {
         "moreInfo": "Back",
-        "grantPermissions": "Grant write permissions"
+        "grantPermissions": "Grant write permissions",
+        "syncOganizations": "Resync organisations"
       }
     }
   }
