--- a/translations/v2/en/pages/project-details/project-application-details.json
+++ b/translations/v2/en/pages/project-details/project-application-details.json
@@ -15,7 +15,7 @@
   "profile": {
     "stats": {
       "title": "Main KPIs",
-      "activity": "activity",
+      "activity": "Activity",
       "rewarded": "Rewarded"
     },
     "motivations": {
