refactor(applications): wording

--- a/translations/v2/en/pages/project-details/project-application-details.json
+++ b/translations/v2/en/pages/project-details/project-application-details.json
@@ -20,7 +20,7 @@
     },
     "motivations": {
       "motivation": "How the contributor background can be leveraged",
-      "approach": "How the contributor's will approach the problem"
+      "approach": "How the contributor will approach the problem"
     },
     "buttons": {
       "assign": "Assign contributor",
