refactor(applications): review application wording

--- a/translations/v2/en/pages/project-applications/project-applications-table.json
+++ b/translations/v2/en/pages/project-applications/project-applications-table.json
@@ -13,7 +13,11 @@
       "one": "__count__ applicant",
       "zero": "0 applicants"
     },
-    "reviewApplication": "Review application"
+    "reviewApplication": {
+      "many": "Review applications",
+      "one": "Review application",
+      "zero": "No applications"
+    }
   },
   "empty": {
     "title": "No applications",
