Add categories in project details

--- a/translations/v2/en/pages/project-overview.json
+++ b/translations/v2/en/pages/project-overview.json
@@ -28,6 +28,7 @@
     "projectLeads": "Project leads",
     "contributors": "Contributors",
     "ecosystems": "Ecosystems",
+    "categories": "Categories",
     "sponsors": "Sponsors",
     "languages": "Languages",
     "moreInfo": "More info",
