WIP : Suggest categories

--- a/translations/v2/en/features/filters.json
+++ b/translations/v2/en/features/filters.json
@@ -24,7 +24,8 @@
     "zero": "Categories",
     "empty": "No categories found",
     "one": "__count__ category",
-    "many": "__count__ categories"
+    "many": "__count__ categories",
+    "suggest": "Suggest"
   },
   "transactions": {
     "title": "Transactions",
