--- a/translations/v2/en/features/filters.json
+++ b/translations/v2/en/features/filters.json
@@ -17,6 +17,16 @@
     "one": "__count__ ecosystem",
     "many": "__count__ ecosystems"
   },
+  "categories": {
+    "title": "Categories",
+    "all": "All categories",
+    "some": "Categories",
+    "zero": "Categories",
+    "empty": "No categories found",
+    "one": "__count__ category",
+    "many": "__count__ categories",
+    "suggest": "Suggest"
+  },
   "transactions": {
     "title": "Transactions",
     "all": "All transactions",
