--- a/translations/v2/en/pages/billing-create-stacks.json
+++ b/translations/v2/en/pages/billing-create-stacks.json
@@ -19,7 +19,7 @@
       },
       "points": {
         "1": "when you don’t have a legal structure",
-        "2": "limited to 5,000 USD in rewards per year",
+        "2": "The annual reward amount is limited based on your tax residency.",
         "3": "requires identity verification"
       },
       "tooltip": "You can only have 1 individual billing profile"
