feat(hackathon): page layout

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -1,4 +1,8 @@
 {
+  "header": {
+    "hackathon": "Hackathon",
+    "back": "Back"
+  },
   "back": "Back",
   "navigation": {
     "overview": "Overview",
