feat(hackathon): basic register modal

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -23,6 +23,14 @@
     },
     "close": "Close"
   },
+  "registerModal": {
+    "title": "Register",
+    "telegram": {
+      "label": "We need your Telegram handle",
+      "placeholder": "Telegram"
+    },
+    "submit": "Register"
+  },
   "back": "Back",
   "navigation": {
     "overview": "Overview",
