--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -3,6 +3,26 @@
     "hackathons": "Hackathons",
     "back": "Back"
   },
+  "info": {
+    "register": "Register",
+    "seeEvents": "See events",
+    "eventOverTooltip": "The event is over",
+    "communityLinks": "Community links",
+    "links": "Links",
+    "totalBudget": "Total budget",
+    "sponsors": "Sponsors",
+    "countLinks": {
+      "zero": "0 links",
+      "one": "1 link",
+      "many": "__count__ links"
+    },
+    "countSponsors": {
+      "zero": "0 sponsors",
+      "one": "1 sponsor",
+      "many": "__count__ sponsors"
+    },
+    "close": "Close"
+  },
   "back": "Back",
   "navigation": {
     "overview": "Overview",
