refactor(hackathon): register buttons

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -5,6 +5,7 @@
   },
   "info": {
     "register": "Register",
+    "connectToRegister": "Connect to register",
     "seeEvents": "See events",
     "eventOverTooltip": "The event is over",
     "communityLinks": "Community links",
