feat(hackathon): registered button

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -6,6 +6,7 @@
   "info": {
     "register": "Register",
     "connectToRegister": "Connect to register",
+    "registered": "Registered",
     "seeEvents": "See events",
     "eventOverTooltip": "The event is over",
     "communityLinks": "Community links",
