Feat/register hackathon (#2483)

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -5,6 +5,8 @@
   },
   "info": {
     "register": "Register",
+    "connectToRegister": "Connect to register",
+    "registered": "Registered",
     "seeEvents": "See events",
     "eventOverTooltip": "The event is over",
     "communityLinks": "Community links",
