Add card to hackathon banner (#2484)
Co-authored-by: Hayden Cleary <5160414+haydencleary@users.noreply.github.com>
Co-authored-by: Mehdi Hamri <143011364+pixelfact@users.noreply.github.com>

--- a/translations/v2/en/features/hackathon-card.json
+++ b/translations/v2/en/features/hackathon-card.json
@@ -2,8 +2,10 @@
   "title": "Hackathon",
   "status": {
     "live": "Live now",
-    "open": "Application open",
+    "open": "Coming soon",
     "closed": "Closed"
   },
-  "button": "Explore"
+  "button": "Explore",
+  "applicants": "Applicants",
+  "issuesOpen": "Issues open"
 }
