feat(hackathon) sidepanel

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -7,6 +7,7 @@
     "register": "Register",
     "connectToRegister": "Connect to register",
     "registered": "Registered",
+    "seeIssues": "See all issues",
     "seeEvents": "See events",
     "eventOverTooltip": "The event is over",
     "communityLinks": "Community links",
