add label to table

--- a/translations/v2/en/pages/project-applications/project-applications-table.json
+++ b/translations/v2/en/pages/project-applications/project-applications-table.json
@@ -4,6 +4,7 @@
   "columns": {
     "date": "Date",
     "repository": "Repository",
+    "label": "Label",
     "applicants": "Applicants",
     "contribution": "Contribution"
   },
