--- a/translations/v2/en/features/project-side-overview.json
+++ b/translations/v2/en/features/project-side-overview.json
@@ -4,5 +4,13 @@
     "one": "1 link",
     "many": "__count__ links"
   },
-  "links": "Links"
+  "links": "Links",
+  "sponsors": "Sponsors",
+  "projectLeads": "Project leads",
+  "contributors": "Contributors",
+  "countSponsors": {
+    "zero": "0 sponsors",
+    "one": "1 sponsor",
+    "many": "__count__ sponsors"
+  }
 }
