--- a/translations/v2/en/features/project-side-overview.json
+++ b/translations/v2/en/features/project-side-overview.json
@@ -13,5 +13,6 @@
     "one": "1 sponsor",
     "many": "__count__ sponsors"
   },
-  "languages": "Languages"
+  "languages": "Languages",
+  "categories": "Categories"
 }
