--- a/translations/v2/en/commons/enums.json
+++ b/translations/v2/en/commons/enums.json
@@ -7,7 +7,8 @@
       "LIKELY_TO_REWARD": "Likely to reward",
       "NEWBIES_WELCOME": "Newbies welcome",
       "UPDATED_ROADMAP": "Strong expertise required",
-      "WORK_IN_PROGRESS": "Work in progress"
+      "WORK_IN_PROGRESS": "Work in progress",
+      "HAS_GOOD_FIRST_ISSUES": "Issues available"
     },
     "sort": {
       "NAME": "Project name",
