--- a/translations/v2/en/pages/project-overview.json
+++ b/translations/v2/en/pages/project-overview.json
@@ -49,11 +49,8 @@
       "none": "None"
     },
     "empty": {
-      "title": "No good first issues listed.",
-      "description": {
-        "lead": "Start taging issues with “good first issue” on GitHub to add them on this section.",
-        "contributor": "This project might have other open issues on its Github page."
-      },
+      "title": "No Good First Issues? Express Your Interest!",
+      "description": "Show your interest by filling out this form, \nand our maintainers will connect you with suitable opportunities!",
       "button": {
         "lead": "List issues on Github",
         "contributor": "See all issues on Github"
