Add notification switch to empty state and clean (#2573)

--- a/translations/v2/en/pages/project-overview.json
+++ b/translations/v2/en/pages/project-overview.json
@@ -49,15 +49,10 @@
       "none": "None"
     },
     "empty": {
-      "title": "No good first issues listed.",
-      "description": {
-        "lead": "Start taging issues with “good first issue” on GitHub to add them on this section.",
-        "contributor": "This project might have other open issues on its Github page."
-      },
-      "button": {
-        "lead": "List issues on Github",
-        "contributor": "See all issues on Github"
-      }
+      "title": "No Good First Issues? Express Your Interest!",
+      "descriptionAuthenticated": "Show your interest by filling out this form, and our maintainers will connect you with suitable opportunities!",
+      "descriptionAnonymous": "Connect to OnlyDust to express your interest in contributing to this project.",
+      "connectToFillForm": "Connect and show interest"
     },
     "overview": {
       "title": "Overview",
