--- a/translations/v2/en/pages/signup/onboarding/onboarding-tunnel.json
+++ b/translations/v2/en/pages/signup/onboarding/onboarding-tunnel.json
@@ -1,6 +1,6 @@
 {
   "title": "Complete Your Profile",
-  "content": "To personalize your experience, please follow these steps. The first step is mandatory, while the following ones are optional but highly recommended to enhance your experience.",
+  "content": "To personalize your experience, please follow these steps. The first two steps are mandatory, while the following ones are optional but highly recommended to enhance your experience.",
   "steps": {
     "information": {
       "title": "Verification Information",
