--- a/translations/v2/en/pages/signup/verification-information.json
+++ b/translations/v2/en/pages/signup/verification-information.json
@@ -17,7 +17,7 @@
       "tag": "Recommended"
     }
   },
-  "specialMention": "All information will be used only by Onlydust and will only be public if you authorize it.",
+  "specialMention": "All information will be used only by OnlyDust and will only be public if you authorize it.",
   "footer": {
     "back": "Back",
     "next": "Next"
