feat(signup): complete profile form

--- a/translations/v2/en/pages/signup/onboarding/complete-your-profile/complete-your-profile.json
+++ b/translations/v2/en/pages/signup/onboarding/complete-your-profile/complete-your-profile.json
@@ -21,6 +21,10 @@
     "website": {
       "label": "Website",
       "placeholder": "Enter your website"
+    },
+    "toast": {
+        "success": "Completed profile successfully.",
+        "error": "Profile completion failed."
     }
   }
 }
