feat(menu): link pdf

--- a/translations/v2/en/features/menu.json
+++ b/translations/v2/en/features/menu.json
@@ -8,7 +8,7 @@
   "hackathons": "Hackathons",
   "publicProfile": "Public profile",
   "feedback": "Feedback",
-  "terms": "Terms",
+  "terms": "Terms & Conditions",
   "privacy": "Privacy",
   "logout": "Log out",
   "profile": {
