Update profile and onboarding to add contactEmail field

--- a/translations/v2/en/pages/settings-profile.json
+++ b/translations/v2/en/pages/settings-profile.json
@@ -9,6 +9,10 @@
       "edit": "Edit on Github"
     }
   },
+  "notificationSettings": {
+    "title": "Notification",
+    "subtitle": "Enter a contact email. This email will be used by OnlyDust to send you notifications and to get in touch with you."
+  },
   "informations": {
     "avatar": "Avatar",
     "location": "Location",
