feat(legal-notice): page

--- a/translations/v2/en/features/menu.json
+++ b/translations/v2/en/features/menu.json
@@ -8,8 +8,7 @@
   "hackathons": "Hackathons",
   "publicProfile": "Public profile",
   "feedback": "Feedback",
-  "terms": "Terms & Conditions",
-  "privacy": "Privacy",
+  "legalNotice": "Legal Notice",
   "logout": "Log out",
   "profile": {
     "manage": "Manage my account",
