feat(*): legal-notice
context

--- a/translations/v2/en/features/menu.json
+++ b/translations/v2/en/features/menu.json
@@ -8,7 +8,7 @@
   "hackathons": "Hackathons",
   "publicProfile": "Public profile",
   "feedback": "Feedback",
-  "legalNotice": "Legal Notice",
+  "legalNotice": "Legal notice",
   "logout": "Log out",
   "profile": {
     "manage": "Manage my account",
